Update testing docs
Signed-off-by: noahgildersleeve <noahgildersleeve@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       
     </header>
     <div class="homepage-content">
-      <p>This website contains documentation for the Harvester test cases.</p>
+      <p>This website contains documentation for the Harvester test cases. test test test</p>
 <ul>
 <li><a href="manual">Manual Test Cases</a></li>
 </ul>
