Update testing docs
Signed-off-by: yasker <yasker@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <ul>
 <li><a href="manual">Manual Test Cases</a></li>
 <li><a href="integration">Integration</a></li>
+<li><a href="backend">Backend API Tests</a></li>
 </ul>
 
     </div>
