--- a/integration/index.html
+++ b/integration/index.html
@@ -27,10 +27,9 @@
 </ul>
 </li>
 <li><a href="#adding_new_tests">Adding New Tests</a></li>
-<li><a href="#manual_test_cases">Manual Test Cases</a><ul>
+<li><a href="#manual_test_cases">Manual Test Cases</a></li>
 <li><a href="#generating_docs">Generating the test doc sites</a></li>
-</ul>
-</li>
+<li><a href="#generating_skels">Generating test skeletongs</a></li>
 </ul>
 
 <a href="#overview-" id="overview-" style="color: inherit; text-decoration: none;">
@@ -304,6 +303,16 @@ These sub-directories must contain a file named <code>_index.md</code> with the 
 </li>
 </ul>
 
+<a href="#creating-test-skeletons-for-new-featurestickets-" id="creating-test-skeletons-for-new-featurestickets-" style="color: inherit; text-decoration: none;">
+  <h1>Creating test skeletons for new features/tickets <a name="generating_skels"></h1>
+</a>
+<p>There is a test skel spec to use as a template in <code>tests/cypress/skel/</code>.</p>
+<ul>
+<li>If you are adding a test to an existing suite like <code>tests/integration/login.spec.ts</code> then you can just use the template jsdoc and function call then add the test steps.</li>
+<li>If you are creating a new logical group of tests you can copy the <code>skel.spec.ts</code> file into integration or into a subdirectory if it fits more into that category then rename it appropriately</li>
+<li>Add the <code>@notImplemented</code> tag to the test case if it hasn&#39;t been implemented yet. This will have it shown with that tag on the static site.</li>
+</ul>
+
 <a href="#test-skeletons" id="test-skeletons" style="color: inherit; text-decoration: none;">
   <h1>Test skeletons</h1>
 </a>
@@ -330,4 +339,4 @@ These sub-directories must contain a file named <code>_index.md</code> with the 
 <li>Add pass at the end of the function.</li>
 <li>Don’t assume the default setting will always work. Call out the expected settings in the prerequisite and they should be set explicitly at the beginning of the test. Use the fixture client or others to reset any changed settings back to default.</li>
 </ol>
-</div></div><div class="col-4 col-menu menu-sticky-wrap menu-highlight"><nav class="tsd-navigation primary"><ul><li class="current"><a href="modules.html">Modules</a></li><li class=" tsd-kind-module"><a href="modules/editHosts_po.html">edit<wbr/>Hosts.po</a></li><li class=" tsd-kind-module"><a href="modules/editYaml_po.html">edit<wbr/>Yaml.po</a></li><li class=" tsd-kind-module"><a href="modules/hosts_po.html">hosts.po</a></li><li class=" tsd-kind-module"><a href="modules/login_po.html">login.po</a></li><li class=" tsd-kind-module"><a href="modules/settings_po.html">settings.po</a></li><li class=" tsd-kind-module"><a href="modules/sidebar_po.html">sidebar.po</a></li><li class=" tsd-kind-module"><a href="modules/support_po.html">support.po</a></li></ul></nav></div></div></div><footer class="with-border-bottom"><div class="container"><h2>Legend</h2><div class="tsd-legend-group"><ul class="tsd-legend"><li class="tsd-kind-class"><span class="tsd-kind-icon">Class</span></li></ul></div><h2>Settings</h2><p>Theme <select id="theme"><option value="os">OS</option><option value="light">Light</option><option value="dark">Dark</option></select></p></div></footer><div class="container tsd-generator"><p>Generated using <a href="https://typedoc.org/" target="_blank">TypeDoc</a></p></div><div class="overlay"></div><script src="assets/main.js"></script></body></html>
+</div></div><div class="col-4 col-menu menu-sticky-wrap menu-highlight"><nav class="tsd-navigation primary"><ul><li class="current"><a href="modules.html">Modules</a></li><li class=" tsd-kind-module"><a href="modules/skel_skel_spec.html">skel/skel.spec</a></li><li class=" tsd-kind-module"><a href="modules/testcases_hosts_spec.html">testcases/hosts.spec</a></li><li class=" tsd-kind-module"><a href="modules/testcases_images_spec.html">testcases/images.spec</a></li><li class=" tsd-kind-module"><a href="modules/testcases_settings_spec.html">testcases/settings.spec</a></li><li class=" tsd-kind-module"><a href="modules/testcases_support_spec.html">testcases/support.spec</a></li></ul></nav></div></div></div><footer class="with-border-bottom"><div class="container"><h2>Legend</h2><div class="tsd-legend-group"><ul class="tsd-legend"><li class="tsd-kind-function"><span class="tsd-kind-icon">Function</span></li></ul></div><h2>Settings</h2><p>Theme <select id="theme"><option value="os">OS</option><option value="light">Light</option><option value="dark">Dark</option></select></p></div></footer><div class="container tsd-generator"><p>Generated using <a href="https://typedoc.org/" target="_blank">TypeDoc</a></p></div><div class="overlay"></div><script src="assets/main.js"></script></body></html>
