Update testing docs
Signed-off-by: lanfon72 <lanfon72@users.noreply.github.com>

--- a/integration/index.html
+++ b/integration/index.html
@@ -253,7 +253,7 @@ run the linter:</p>
   <h1>Manual Test Cases <a name="manual_test_cases" /></h1>
 </a>
 <p>Some scenarios are hard to test using the automation tests and are documented as manual test cases that need to be verified before release.
-The manual test cases are accessible <a href="https://harvesterhci.io/tests/manual/">here</a>.</p>
+The manual test cases are accessible <a href="https://harvester.github.io/tests/manual/">here</a>.</p>
 <p>The manual test case pages can be edited under <code>docs/content/manual/</code>.</p>
 <p>To categorize tests, place them in sub-directories under <code>docs/content/manual/</code>.
 These sub-directories must contain a file named <code>_index.md</code> with the following:</p>
