--- a/backend/fixtures/network.html
+++ b/backend/fixtures/network.html
@@ -98,11 +98,14 @@ def _cleanup_network(admin_session, harvester_api_endpoints, network_id,
 
     # NOTE(gyee): there&#39;s no way we know how many VMs the network is currently
     # attached to. Will need to keep trying till all the VMs had been deleted
-    success = polling2.poll(
-        _delete_network,
-        step=5,
-        timeout=wait_timeout)
-    assert success, &#39;Unable to cleanup network: %s&#39; % (network_id)
+    try:
+        polling2.poll(
+            _delete_network,
+            step=5,
+            timeout=wait_timeout)
+    except polling2.TimeoutException as e:
+        errmsg = &#39;Unable to cleanup network: %s&#39; % (network_id)
+        raise AssertionError(errmsg) from e
 
 
 def _lookup_network(request, admin_session, harvester_api_endpoints, vlan_id):
