--- a/backend/apis/test_hosts.html
+++ b/backend/apis/test_hosts.html
@@ -186,7 +186,7 @@ def test_update_using_yaml(request, admin_session, harvester_api_endpoints):
                 harvester_api_endpoints.get_node % (updated_host_data[&#39;id&#39;]))
 
 
-@pytest.mark.last
+@pytest.mark.trylast
 @pytest.mark.delete_host
 @pytest.mark.hosts_p1
 @pytest.mark.p1
@@ -199,6 +199,10 @@ def test_delete_host(request, admin_session, harvester_api_endpoints):
     resp = admin_session.get(harvester_api_endpoints.list_nodes)
     assert resp.status_code == 200, &#39;Failed to list nodes: %s&#39; % (resp.content)
     host_data = resp.json()
+
+    if len(host_data[&#34;data&#34;]) == 1:
+        pytest.skip(&#34;It will break the cluster as it is single node.&#34;)
+
     # FIXME(gyee): for now only delete the last node in the cluster due to
     # https://github.com/harvester/harvester/issues/1398
     # This is assuming that the orders are correct. We&#39;ll need to test
@@ -337,7 +341,7 @@ def test_host_poweroff_state(request, admin_session,
 <summary>
 <span>Expand source code</span>
 </summary>
-<pre><code class="python">@pytest.mark.last
+<pre><code class="python">@pytest.mark.trylast
 @pytest.mark.delete_host
 @pytest.mark.hosts_p1
 @pytest.mark.p1
@@ -350,6 +354,10 @@ def test_delete_host(request, admin_session, harvester_api_endpoints):
     resp = admin_session.get(harvester_api_endpoints.list_nodes)
     assert resp.status_code == 200, &#39;Failed to list nodes: %s&#39; % (resp.content)
     host_data = resp.json()
+
+    if len(host_data[&#34;data&#34;]) == 1:
+        pytest.skip(&#34;It will break the cluster as it is single node.&#34;)
+
     # FIXME(gyee): for now only delete the last node in the cluster due to
     # https://github.com/harvester/harvester/issues/1398
     # This is assuming that the orders are correct. We&#39;ll need to test
