Update testing docs
Signed-off-by: lanfon72 <lanfon72@users.noreply.github.com>

--- a/backend/scenarios/test_rancher_integration.html
+++ b/backend/scenarios/test_rancher_integration.html
@@ -471,6 +471,7 @@ def rke2_cluster(request, admin_session, harvester_api_endpoints,
                         rke2_cluster_name, cluster_id)
 
 
+@pytest.mark.skip(reason=&#34;https://github.com/harvester/tests/issues/384&#34;)
 @pytest.mark.rancher_integration_with_external_rancher
 class TestRancherIntegrationWithExternalRancher:
 
